Tweak Azure Pipeline trigger(s)

--- a/interfaces/PA-App/azure-pipelines-android.yml
+++ b/interfaces/PA-App/azure-pipelines-android.yml
@@ -16,8 +16,8 @@ trigger:
 pr:
   branches:
     include:
-    - native*
-    - android*
+    - 'native*'
+    - 'android*'
   paths:
     include:
     - 'interfaces/PA-App/*'
