--- a/interfaces/AW-App/azure-pipelines-android.yml
+++ b/interfaces/AW-App/azure-pipelines-android.yml
@@ -3,7 +3,7 @@
 # See: https://docs.microsoft.com/en-us/azure/devops/pipelines/ecosystems/android
 
 variables:
-  workingDir: interfaces/PA-App/
+  workingDir: interfaces/AW-App/
 
 
 trigger:
@@ -12,15 +12,15 @@ trigger:
     - master
   paths:
     include:
-    - 'interfaces/PA-App/*'
+    - 'interfaces/AW-App/*'
 pr:
   branches:
     include:
-    - native*
-    - android*
+    - 'native*'
+    - 'android*'
   paths:
     include:
-    - 'interfaces/PA-App/*'
+    - 'interfaces/AW-App/*'
 
 
 pool:
