--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -64,6 +64,7 @@
     "codelyzer": "~5.1.0",
     "cordova": "^9.0.0",
     "cordova-res": "^0.6.0",
+    "dotenv": "^8.2.0",
     "ionic": "^5.4.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
