fix: include set-env-variables script/task in node-scripts

--- a/interfaces/AW-App/package.json
+++ b/interfaces/AW-App/package.json
@@ -10,7 +10,10 @@
     "ionic": "ionic",
     "ng": "ng",
     "start": "ng serve --port 0",
+    "set-env-variables": "node ./_set-env-variabes.js",
+    "prebuild": "npm run set-env-variables",
     "build": "ng build",
+    "prebuild:native": "npm run set-env-variables",
     "build:native": "npm run ionic -- cordova build android ",
     "test": "ng test --no-watch --browsers=ChromeHeadless",
     "test:dev": "ng test",
