Tweak PR trigger(s)

--- a/interfaces/AW-App/azure-pipelines-android.yml
+++ b/interfaces/AW-App/azure-pipelines-android.yml
@@ -16,8 +16,9 @@ trigger:
 pr:
   branches:
     include:
-    - 'native*'
-    - 'android*'
+    - master
+    - native/*
+    - android/*
   paths:
     include:
     - 'interfaces/AW-App/*'
