AB#854 OrgIMS can start 2+ times with 2+ config's

--- a/services/tykn-ssi-services/OrgIMS/Dockerfile
+++ b/services/tykn-ssi-services/OrgIMS/Dockerfile
@@ -27,5 +27,10 @@ RUN ls -la && pwd
 # Install dependencies:
 RUN pip install -e .
 
+# Define config-file per HO
+ARG CONFIG
+ENV CONFIG=${CONFIG}
+
 # Run the application:
-CMD ["python3.6", "start.py"]
+#CMD ["python3.6", "start.py"]
+CMD python3.6 start.py -c ${CONFIG}
