AB#855 docker-compose starts 2 orgims's

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -44,6 +44,8 @@ services:
     build:
       context: tykn-ssi-services/OrgIMS  
       dockerfile: Dockerfile
+      args:
+        - CONFIG=config.json
     init: true
     container_name: orgims
     ports:
@@ -51,6 +53,26 @@ services:
     networks:
       pool_network:
         ipv4_address: 11.0.0.4
+    depends_on:
+      - indypool
+      - tyknims
+    links:
+      - indypool
+      - tyknims
+    restart: on-failure
+  orgims-ho2:
+    build:
+      context: tykn-ssi-services/OrgIMS  
+      dockerfile: Dockerfile
+      args:
+        - CONFIG=config-HO2.json
+    init: true
+    container_name: orgims-ho2
+    ports:
+      - "50004:50004"
+    networks:
+      pool_network:
+        ipv4_address: 11.0.0.9
     depends_on:
       - indypool
       - tyknims
