AB#725 webhook+apache updates

--- a/tools/121-platform.conf
+++ b/tools/121-platform.conf
@@ -2,6 +2,7 @@
         ErrorLog ${APACHE_LOG_DIR}/proxyerr.log
         CustomLog ${APACHE_LOG_DIR}/proxyacc.log common
         ServerName localhost
+        DocumentRoot /var/www/121-platform/PA-app/
 
         ProxyVia On
         ProxyRequests Off
