--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "^7.x.x",
     "@angular/router": "^7.x.x",
     "@ionic-native/core": "^5.10.0",
+    "@ionic-native/fcm": "^5.15.1",
     "@ionic-native/splash-screen": "^5.10.0",
     "@ionic-native/status-bar": "^5.10.0",
     "@ionic/angular": "^4.7.1",
@@ -38,7 +39,10 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "angularx-qrcode": "^1.6.4",
     "cordova-android": "^8.1.0",
+    "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-fcm-with-dependecy-updated": "^4.0.0",
+    "cordova-plugin-firebase": "^2.0.5",
     "core-js": "2.6.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -54,6 +58,7 @@
     "@angular/compiler-cli": "^7.x.x",
     "@angular/language-service": "^7.x.x",
     "@ionic/angular-toolkit": "^1.5.1",
+    "@ionic/lab": "^2.0.13",
     "@types/jasmine": "~3.3.16",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.6.2",
@@ -88,7 +93,17 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-fcm-with-dependecy-updated": {
+        "FCM_CORE_VERSION": "16.0.9",
+        "FCM_VERSION": "18.0.0",
+        "GRADLE_TOOLS_VERSION": "3.5.0",
+        "GOOGLE_SERVICES_VERSION": "4.2.0"
+      },
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      }
     },
     "platforms": [
       "browser",
