Add possible ENV-variable to example-file

--- a/interfaces/PA-App/.env.example
+++ b/interfaces/PA-App/.env.example
@@ -11,6 +11,8 @@ NG_SHOW_DEBUG=false
 NG_USE_ANIMATION=true
 NG_LOCAL_STORAGE=false
 
+NG_SUB_DIR_PATH=
+
 NG_URL_121_SERVICE_API=
 NG_URL_PA_ACCOUNT_SERVICE_API=
 NG_URL_USER_IMS_API=
