AB#897 automatically redirect HTTP to HTTPS

--- a/tools/121-platform.conf
+++ b/tools/121-platform.conf
@@ -2,7 +2,10 @@
         ErrorLog ${APACHE_LOG_DIR}/proxyerr.log
         CustomLog ${APACHE_LOG_DIR}/proxyacc.log common
         ServerName localhost
-        DocumentRoot /var/www/121-platform/PA-app/
+
+        RewriteEngine On
+        RewriteCond %{HTTPS} off
+        RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
         ProxyVia On
         ProxyRequests Off
