--- a/tools/121-platform.conf
+++ b/tools/121-platform.conf
@@ -1,11 +1,15 @@
 <VirtualHost *:80>
         ErrorLog ${APACHE_LOG_DIR}/proxyerr.log
         CustomLog ${APACHE_LOG_DIR}/proxyacc.log common
+
         ServerName localhost
+        DocumentRoot /var/www/121-platform/
 
         RewriteEngine On
         RewriteCond %{HTTPS} off
         RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+        RedirectMatch ^/(.*)-app/tabs/(.*)$ /$1-app
 
         ProxyVia On
         ProxyRequests Off
