Added first twilio sms AB#902'

--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -47,6 +47,7 @@
     "rxjs": "^6.4.0",
     "slug": "^1.0.0",
     "tsc-watch": "^2.1.2",
+    "twilio": "^3.36.0",
     "typeorm": "^0.2.15",
     "typescript": "^3.3.1"
   },
