--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -9,3 +9,11 @@ export const USERCONFIG = {
   emailAidWorker: 'aidworker@example.org',
   countryIdAidWorker: 1,
 }
+
+
+export const TWILIO = {
+         sid: '<your-sid>',
+         authToken: '<your-sid>',
+         testToNumber: '<your-testToNumber>',
+         testFromNumber: '<your-testFromNumber>',
+       };
