AB#725 redirect all subpaths to main path

--- a/tools/121-platform-https.conf
+++ b/tools/121-platform-https.conf
@@ -4,7 +4,7 @@
 
         ServerName localhost
         DocumentRoot /var/www/121-platform/
-        RedirectMatch ^/(.*)-app/tabs/(.*)$ /$1-app
+        RedirectMatch ^/(.*)-app/(.*)$ /$1-app
 
         SSLEngine on
         SSLVerifyClient none
