--- a/tools/121-platform.conf
+++ b/tools/121-platform.conf
@@ -9,7 +9,7 @@
         RewriteCond %{HTTPS} off
         RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
-        RedirectMatch ^/(.*)-app/tabs/(.*)$ /$1-app
+        RedirectMatch ^/(.*)-app/(.*)$ /$1-app
 
         ProxyVia On
         ProxyRequests Off
