--- a/services/PA-accounts-service/Dockerfile.template
+++ b/services/PA-accounts-service/Dockerfile.template
@@ -23,7 +23,7 @@ WORKDIR /home/121/services/PA-accounts-service/
 COPY package*.json ./
 RUN npm ci
 
-# Possible environments: development | production
+# Possible environments: development | staging | production
 ARG NODE_ENV=development
 ENV NODE_ENV="${NODE_ENV}"
 
