Added functionality to verify SMS callback and log the results AB#902 AB#903

--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -16,4 +16,5 @@ export const TWILIO = {
          authToken: '<your-sid>',
          testToNumber: '<your-testToNumber>',
          testFromNumber: '<your-testFromNumber>',
+         ngrok: 'http://bf235b61.ngrok.io/',
        };
