Attempt to fix test

--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -13,7 +13,7 @@ export const USERCONFIG = {
 
 export const TWILIO = {
          sid: '<your-sid>',
-         authToken: '<your-sid>',
+         authToken: 'AC<your-sid>',
          testToNumber: '<your-testToNumber>',
          testFromNumber: '<your-testFromNumber>',
          ngrok: 'http://bf235b61.ngrok.io/',
