Attempt to fix test2

--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -12,7 +12,7 @@ export const USERCONFIG = {
 
 
 export const TWILIO = {
-         sid: '<your-sid>',
+         sid: 'AC<your-sid>',
          authToken: 'AC<your-sid>',
          testToNumber: '<your-testToNumber>',
          testFromNumber: '<your-testFromNumber>',
