--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -35,10 +35,10 @@
     "@angular/platform-browser": "^7.x.x",
     "@angular/platform-browser-dynamic": "^7.x.x",
     "@angular/router": "^7.x.x",
-    "@ionic-native/core": "^5.10.0",
-    "@ionic-native/splash-screen": "^5.10.0",
-    "@ionic-native/status-bar": "^5.10.0",
-    "@ionic/angular": "^4.7.1",
+    "@ionic-native/core": "^5.16.0",
+    "@ionic-native/splash-screen": "^5.16.0",
+    "@ionic-native/status-bar": "^5.16.0",
+    "@ionic/angular": "^4.11.3",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -63,24 +63,24 @@
     "@angular/compiler-cli": "^7.x.x",
     "@angular/language-service": "^7.x.x",
     "@ionic/angular-toolkit": "^1.5.1",
-    "@types/jasmine": "~3.3.16",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.6.2",
-    "codelyzer": "~5.1.0",
+    "@types/jasmine": "^3.4.4",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.12.3",
+    "codelyzer": "^5.2.0",
     "cordova": "^9.0.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.2",
+    "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-res": "^0.6.0",
+    "cordova-res": "^0.8.1",
     "dotenv": "^8.2.0",
-    "ionic": "^5.4.4",
-    "jasmine-core": "~3.4.0",
+    "ionic": "^5.4.5",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.2.0",
-    "karma-chrome-launcher": "~3.0.0",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
