Added wallet backup and restore apis

--- a/services/tykn-ssi-services/OrgIMS/Dockerfile
+++ b/services/tykn-ssi-services/OrgIMS/Dockerfile
@@ -15,6 +15,7 @@ RUN add-apt-repository "deb https://repo.sovrin.org/sdk/deb xenial stable"
 RUN apt-get update && apt-get install -y libindy=1.6.7
 
 ENV VIRTUAL_ENV=/opt/venv
+# ENV RUST_LOG=indy=trace
 RUN python3.6 --version
 RUN python3.6 -m virtualenv --python=/usr/bin/python3.6 $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
@@ -23,7 +24,6 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 #RUN wget "https://raw.githubusercontent.com/hyperledger/indy-sdk/master/cli/docker_pool_transactions_genesis"
 
 ADD . .
-RUN ls -la && pwd
 # Install dependencies:
 RUN pip install -e .
 
