--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -7,6 +7,8 @@
     "ionic": "ionic",
     "ng": "ng",
     "start": "ng serve --port 0",
+    "set-env-variables": "node ./_set-env-variabes.js",
+    "prebuild": "npm run set-env-variables",
     "build": "ng build",
     "test": "ng test --no-watch --browsers=ChromeHeadless",
     "test:dev": "ng test",
@@ -49,6 +51,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.5",
     "codelyzer": "^5.2.0",
+    "dotenv": "^8.2.0",
     "ionic": "^5.4.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
