Moved notifcation urls to config and added notify to inclusion status AB#981

--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -16,5 +16,5 @@ export const TWILIO = {
          authToken: 'AC<your-sid>',
          testToNumber: '<your-testToNumber>',
          testFromNumber: '<your-testFromNumber>',
-         ngrok: 'http://bf235b61.ngrok.io/',
+         ngrok: 'http://example.ngrok.io/',
        };
