--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -15,6 +15,7 @@ export const TWILIO = {
          sid: 'AC<your-sid>',
          authToken: 'AC<your-sid>',
          testToNumber: '<your-testToNumber>',
-         testFromNumber: '<your-testFromNumber>',
+         testFromNumberVoice: '<your-testFromNumber>',
+         testFromNumberSms: '<your-testFromNumber>',
          ngrok: 'http://example.ngrok.io/',
        };
