--- a/tools/121-platform-https.conf
+++ b/tools/121-platform-https.conf
@@ -1,29 +1,138 @@
 <VirtualHost *:443>
-        ErrorLog ${APACHE_LOG_DIR}/proxyerr.log
-        CustomLog ${APACHE_LOG_DIR}/proxyacc.log common
 
-        ServerName localhost
-        DocumentRoot /var/www/121-platform/
-        RedirectMatch ^/(.*)-app/(.*)$ /$1-app
+  ErrorLog ${APACHE_LOG_DIR}/proxyerr.log
+  CustomLog ${APACHE_LOG_DIR}/proxyacc.log common
 
-        SSLEngine on
-        SSLVerifyClient none
-        SSLCertificateFile /home/121-platform/tools/certificates/certvqebkt
-        SSLCACertificateFile /home/121-platform/tools/certificates/cert2xF5qw
+  ServerName localhost
+  DocumentRoot /var/www/121-platform/
 
-        ProxyVia On
-        ProxyRequests Off
+  SSLEngine on
+  SSLVerifyClient none
+  SSLCertificateFile /home/121-platform/tools/certificates/certvqebkt
+  SSLCACertificateFile /home/121-platform/tools/certificates/cert2xF5qw
 
-        ProxyPass /webhook http://localhost:3099/
-        ProxyPassReverse /webhook http://localhost:3099/
+  ProxyVia On
+  ProxyRequests Off
 
-        ProxyPass /121-service/ http://localhost:3000/
-        ProxyPassReverse /121-service/ http://localhost:3000/
+  ProxyPass /webhook http://localhost:3099/
+  ProxyPassReverse /webhook http://localhost:3099/
 
-        ProxyPass /PA-accounts/ http://localhost:3001/
-        ProxyPassReverse /PA-accounts/ http://localhost:3001/
+  ProxyPass /121-service/ http://localhost:3000/
+  ProxyPassReverse /121-service/ http://localhost:3000/
 
-        ProxyPass /UserIMS/ http://localhost:50003/
-        ProxyPassReverse /UserIMS/ http://localhost:50003/
+  ProxyPass /PA-accounts/ http://localhost:3001/
+  ProxyPassReverse /PA-accounts/ http://localhost:3001/
+
+  ProxyPass /UserIMS/ http://localhost:50003/
+  ProxyPassReverse /UserIMS/ http://localhost:50003/
+
+
+  # Server configuration for all web interfaces:
+  # https://github.com/h5bp/server-configs-apache
+  <Directory "^/var/www/121-platform/(PA-app|AW-app|HO-portal)/">
+    AllowOverride None
+
+    AddDefaultCharset utf-8
+
+    TraceEnable Off
+    ServerSignature Off
+    ServerTokens Prod
+
+    FallbackResource index.html
+
+    <IfModule mod_mime.c>
+      AddType application/atom+xml          atom
+      AddType application/json              json map topojson
+      AddType application/ld+json           jsonld
+      AddType application/rss+xml           rss
+      AddType application/xml               xml
+      AddType text/javascript               js mjs
+      AddType application/manifest+json     webmanifest
+      AddType audio/mp4                     f4a f4b m4a
+      AddType audio/ogg                     oga ogg opus
+      AddType image/svg+xml                 svg svgz
+      AddType image/webp                    webp
+      AddType video/mp4                     f4v f4p m4v mp4
+      AddType video/ogg                     ogv
+      AddType video/webm                    webm
+      AddType image/x-icon                  cur ico
+      AddType font/woff                     woff
+      AddType font/woff2                    woff2
+      AddType font/ttf                      ttf
+      AddType font/collection               ttc
+      AddType font/otf                      otf
+      AddType text/calendar                 ics
+      AddType text/markdown                 markdown md
+      AddType text/vcard                    vcard vcf
+
+      AddCharset utf-8  .css  .ics  .js  .json  .webmanifest  .map .markdown  .md  .mjs  .vcard  .vcf
+    </IfModule>
+
+    <IfModule mod_headers.c>
+      Header set X-UA-Compatible "IE=edge" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
+      Header set X-Frame-Options "DENY" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
+      Header set Content-Security-Policy "default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
+      Header set X-Content-Type-Options "nosniff"
+      Header set X-XSS-Protection "1; mode=block" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
+      Header set Referrer-Policy "same-origin" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
+      Header merge Cache-Control "no-transform"
+      Header unset ETag
+      Header unset X-Powered-By
+      Header always unset X-Powered-By
+    </IfModule>
+
+    <IfModule mod_autoindex.c>
+        Options -Indexes
+    </IfModule>
+
+    <IfModule mod_deflate.c>
+      <IfModule mod_setenvif.c>
+        <IfModule mod_headers.c>
+          SetEnvIfNoCase ^(Accept-EncodXng|X-cept-Encoding|X{15}|~{15}|-{15})$ ^((gzip|deflate)\s*,?\s*)+|[X~-]{4,13}$ HAVE_Accept-Encoding
+          RequestHeader append Accept-Encoding "gzip,deflate" env=HAVE_Accept-Encoding
+        </IfModule>
+      </IfModule>
+
+      <IfModule mod_filter.c>
+        AddOutputFilterByType DEFLATE "application/atom+xml" \
+                                      "application/javascript" \
+                                      "application/json" \
+                                      "application/manifest+json" \
+                                      "application/rss+xml" \
+                                      "application/schema+json" \
+                                      "application/x-font-ttf" \
+                                      "application/x-javascript" \
+                                      "application/xhtml+xml" \
+                                      "application/xml" \
+                                      "font/opentype" \
+                                      "font/otf" \
+                                      "image/svg+xml" \
+                                      "image/vnd.microsoft.icon" \
+                                      "text/calendar" \
+                                      "text/css" \
+                                      "text/html" \
+                                      "text/javascript" \
+                                      "text/plain" \
+                                      "text/markdown" \
+                                      "text/vcard" \
+                                      "text/x-cross-domain-policy" \
+                                      "text/xml"
+      </IfModule>
+
+      <IfModule mod_mime.c>
+          AddEncoding gzip              svgz
+      </IfModule>
+    </IfModule>
+
+    <IfModule mod_expires.c>
+      ExpiresActive on
+      ExpiresDefault                                      "access plus 1 month"
+
+      ExpiresByType application/manifest+json             "access plus 1 week"
+      ExpiresByType application/x-web-app-manifest+json   "access plus 0 seconds"
+      ExpiresByType text/cache-manifest                   "access plus 0 seconds"
+    </IfModule>
+
+  </Directory>
 
 </VirtualHost>
