Remove Indy SDK from PA-App dependencies
Related AB#1086

--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -4,10 +4,6 @@
   "author": "121.global",
   "homepage": "https://www.121.global/",
   "scripts": {
-    "dev:plugin-add-local": "npm run cordova -- plugin add --link ../../../121-indy-wrapper-ios",
-    "dev:plugin-add": "npm run ionic -- cordova plugin add github:global-121/121-indy-wrapper-ios#enable-121-pool",
-    "dev:plugin-remove": "npm run ionic -- cordova plugin remove cordova-plugin-global-121-indy",
-    "dev:plugin-refresh": "npm run dev:plugin-remove && npm run dev:plugin-add && npm run cordova plugins save",
     "dev:on-device": "npm run ionic -- cordova run android --device --consolelogs --livereload",
     "dev:local-android": "npm run ionic -- cordova run android --emulator --consolelogs --livereload",
     "dev:local-ios": "npm run ionic -- cordova run ios --consolelogs --livereload",
@@ -46,8 +42,6 @@
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^5.0.1",
-    "cordova-plugin-add-swift-support": "^2.0.2",
-    "cordova-plugin-global-121-indy": "github:global-121/121-indy-wrapper-ios#enable-121-pool",
     "core-js": "2.6.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -97,8 +91,7 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-global-121-indy": {}
+      "cordova-plugin-device": {}
     },
     "platforms": [
       "browser",
