Fixes after testing-in-production :/
- Relaxed "Content-Security-Policy" required for current Angular setup
- "FallbackResource" now named (redundantly) explicitly; as the regex wasn't working as I expected

--- a/tools/121-platform-https.conf
+++ b/tools/121-platform-https.conf
@@ -29,12 +29,10 @@
 
   # Server configuration for all web interfaces:
   # https://github.com/h5bp/server-configs-apache
-  <Directory "^/var/www/121-platform/(PA-app|AW-app|HO-portal)/">
+  <Directory "/var/www/121-platform/">    
     AddDefaultCharset utf-8
 
     ServerSignature Off
-
-    FallbackResource index.html
 
     <IfModule mod_mime.c>
       AddType application/atom+xml          atom
@@ -67,7 +65,7 @@
     <IfModule mod_headers.c>
       Header set X-UA-Compatible "IE=edge" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
       Header set X-Frame-Options "DENY" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
-      Header set Content-Security-Policy "default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
+      Header set Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
       Header set X-Content-Type-Options "nosniff"
       Header set X-XSS-Protection "1; mode=block" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
       Header set Referrer-Policy "same-origin" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
@@ -75,10 +73,6 @@
       Header unset ETag
       Header unset X-Powered-By
       Header always unset X-Powered-By
-    </IfModule>
-
-    <IfModule mod_autoindex.c>
-        Options -Indexes
     </IfModule>
 
     <IfModule mod_deflate.c>
@@ -130,5 +124,16 @@
     </IfModule>
 
   </Directory>
+  
+  <Directory "/var/www/121-platform/PA-app/">
+    FallbackResource /PA-app/index.html
+  </Directory>
+  <Directory "/var/www/121-platform/AW-app/">
+    FallbackResource /AW-app/index.html
+  </Directory>
+  <Directory "/var/www/121-platform/HO-portal/">
+    FallbackResource /HO-portal/index.html
+  </Directory>
+
 
 </VirtualHost>
