Include the use of "data:"-URLs

--- a/tools/121-platform-https.conf
+++ b/tools/121-platform-https.conf
@@ -65,7 +65,7 @@
     <IfModule mod_headers.c>
       Header set X-UA-Compatible "IE=edge" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
       Header set X-Frame-Options "DENY" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
-      Header set Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
+      Header set Content-Security-Policy "default-src 'self' data: ; style-src 'self' 'unsafe-inline'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
       Header set X-Content-Type-Options "nosniff"
       Header set X-XSS-Protection "1; mode=block" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
       Header set Referrer-Policy "same-origin" "expr=%{CONTENT_TYPE} =~ m#text/html#i"
