Add ENV-variables to build-commands + fix inconsistencies

--- a/interfaces/PA-App/azure-pipelines-android.yml
+++ b/interfaces/PA-App/azure-pipelines-android.yml
@@ -49,6 +49,7 @@ steps:
     NG_SHOW_DEBUG: $(ng_show_debug)
     NG_LOCAL_STORAGE: $(ng_local_storage)
     NG_USE_ANIMATION: $(ng_use_animation)
+    NG_SUB_DIR_PATH: $(ng_sub_dir_path)
     NG_URL_121_SERVICE_API: $(test_ng_url_121_service_api)
     NG_URL_PA_ACCOUNT_SERVICE_API: $(test_ng_url_pa_account_service_api)
     NG_URL_USER_IMS_API: $(test_url_user_ims_api)
@@ -66,6 +67,7 @@ steps:
     NG_SHOW_DEBUG: $(ng_show_debug)
     NG_LOCAL_STORAGE: $(ng_local_storage)
     NG_USE_ANIMATION: $(ng_use_animation)
+    NG_SUB_DIR_PATH: $(ng_sub_dir_path)
     NG_URL_121_SERVICE_API: $(production_ng_url_121_service_api)
     NG_URL_PA_ACCOUNT_SERVICE_API: $(production_ng_url_pa_account_service_api)
     NG_URL_USER_IMS_API: $(production_ng_url_user_ims_api)
