--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "programs-service",
+  "name": "121-service",
   "version": "0.0.1",
   "author": "121.global",
   "homepage": "https://www.121.global/",
