AB#1203 wallet-volumes for userims

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -73,6 +73,8 @@ services:
       dockerfile: Dockerfile
     init: true
     container_name: userims
+    volumes:
+      - "./tykn-ssi-services/UserIMS/wallet-volume:/tmp/.indy_client"
     healthcheck:
       test: "exit 0"
     restart: on-failure
