Fixed OrgIms wallet creation logic. Added few docker ignore files. Fixed starting sequence of the services

--- a/services/tykn-ssi-services/OrgIMS/Dockerfile
+++ b/services/tykn-ssi-services/OrgIMS/Dockerfile
@@ -33,4 +33,4 @@ ENV CONFIG=${CONFIG}
 
 # Run the application:
 #CMD ["python3.6", "start.py"]
-CMD python3.6 start.py -c ${CONFIG}
+# CMD python3.6 start.py -c ${CONFIG}
