AB#1223 logs-volume-path + orgims start

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     container_name: tyknims
     volumes:
       - "./tykn-ssi-services/TyknIMS/wallet-volume:/tmp/.indy_client/wallet"
-      - "/tmp/logs:/var/log/tyknims"
+      - "./logs-volume:/var/log/tyknims"
     ports:
       - "50001:50001"
     networks:
@@ -53,7 +53,7 @@ services:
     container_name: orgims
     volumes:
       - "./tykn-ssi-services/OrgIMS/wallet-volume:/tmp/wallet"
-      - "/tmp/logs:/var/log/orgims"
+      - "./logs-volume:/var/log/orgims"
     ports:
       - "50002:50002"
     healthcheck:
@@ -65,7 +65,6 @@ services:
     depends_on:
       - indypool
       - tyknims
-    command: bash -c "scripts/wait-for-it.sh 11.0.0.3:50003/api/status-check -- python3.6 start.py -c config.json"
     links:
       - indypool
       - tyknims
@@ -78,7 +77,7 @@ services:
     container_name: userims
     volumes:
       - "./tykn-ssi-services/UserIMS/wallet-volume:/tmp/.indy_client"
-      - "/tmp/logs:/var/log/userims"
+      - "./logs-volume:/var/log/userims"
     healthcheck:
       test: "exit 0"
     restart: on-failure
