--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -6,14 +6,14 @@
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint '**/*.ts'",
+    "prestart": "npx ts-node src/scripts seed-prod",
     "start": "node index.js",
     "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
     "start:watch": "nodemon",
     "prestart:prod": "tsc",
-    "seed": "ts-node src/scripts seed-prod",
     "seed:dev": "npx ts-node src/scripts seed-dev && npm run seed:publish",
     "seed:mvp": "npx ts-node src/scripts seed-mvp && npm run seed:publish",
-    "seed:node": "node index.js & npm run seed",
+    "seed:pilot": "npx ts-node src/scripts seed-pilot && npm run seed:publish",
     "seed:publish": "npx ts-node src/scripts seed-publish",
     "start:prod": "node dist/main.js",
     "test": "jest --config=jest.json",
