--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -44,22 +44,22 @@
     "@angular/compiler-cli": "^7.x.x",
     "@angular/language-service": "^7.x.x",
     "@ionic/angular-toolkit": "^1.5.1",
-    "@types/jasmine": "~3.3.16",
+    "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.5",
-    "codelyzer": "^5.2.0",
+    "codelyzer": "^5.2.1",
     "dotenv": "^8.2.0",
     "ionic": "^5.4.13",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.2.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.3.0",
-    "tslint": "^5.20.0",
+    "tslint": "^5.20.1",
     "typescript": "3.1.6"
   }
 }
