--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -46,7 +46,7 @@
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.5",
+    "@types/node": "^12.12.21",
     "codelyzer": "^5.2.1",
     "dotenv": "^8.2.0",
     "ionic": "^5.4.13",
@@ -58,8 +58,8 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
-    "typescript": "3.1.6"
+    "typescript": "3.2.4"
   }
 }
