AB#1200 migrations 121-service

--- a/services/121-service/ormconfig.json.example
+++ b/services/121-service/ormconfig.json.example
@@ -7,6 +7,13 @@
   "database": "global121",
   "schema": "121-service",
   "entities": ["src/**/**.entity{.ts,.js}"],
+  "migrationsTableName": "custom_migration_table",
+  "migrations": [
+    "migration/*.ts"
+  ],
+  "cli": {
+    "migrationsDir": "migration"
+  },
   "dropSchema": true,
   "synchronize": true
 }
