--- a/services/PA-accounts-service/package.json
+++ b/services/PA-accounts-service/package.json
@@ -6,6 +6,7 @@
     "main": "index.js",
     "scripts": {
         "lint": "npx eslint '**/*.ts'",
+        "prestart": "npm run migration:run",
         "start": "node index.js",
         "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
         "start:watch": "nodemon",
@@ -17,7 +18,10 @@
         "start:seed": "tsc-watch --onSuccess \" npm run seed:node  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
         "test": "jest --config=jest.json",
         "test:watch": "npm test -- --watchAll",
-        "test:coverage": "npm test -- --coverage --coverageDirectory=coverage"
+        "test:coverage": "npm test -- --coverage --coverageDirectory=coverage",
+        "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+        "migration:generate": "npm run typeorm migration:generate -- -n",
+        "migration:run": "npm run typeorm migration:run"
     },
     "private": true,
     "dependencies": {
@@ -65,6 +69,7 @@
         "supertest": "^4.0.2",
         "swagger-ui-express": "^4.0.6",
         "ts-jest": "^24.0.0",
-        "ts-node": "~8.3.0"
+        "ts-node": "~8.3.0",
+        "tsconfig-paths": "^3.9.0"
     }
 }
