--- a/services/PA-accounts-service/tsconfig.json
+++ b/services/PA-accounts-service/tsconfig.json
@@ -12,9 +12,10 @@
     "sourceMap": true,
     "allowJs": true,
     "outDir": "./dist",
-    "types": ["jest"],
+    "types": ["jest", "node"],
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": "./"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"],
