AB#1252 restart containers unless-stopped

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     networks:
       pool_network:
         ipv4_address: 11.0.0.2
+    restart: unless-stopped
   tyknims:
     build: 
       context: tykn-ssi-services/TyknIMS  
@@ -43,6 +44,7 @@ services:
       - indypool
     links:
       - indypool
+    restart: unless-stopped
   orgims:
     build:
       context: tykn-ssi-services/OrgIMS  
@@ -58,7 +60,7 @@ services:
       - "50002:50002"
     healthcheck:
       test: "exit 0"
-    restart: on-failure
+    restart: unless-stopped
     networks:
       pool_network:
         ipv4_address: 11.0.0.4
@@ -68,7 +70,7 @@ services:
     links:
       - indypool
       - tyknims
-    restart: on-failure
+    restart: unless-stopped
   userims:
     build: 
       context: tykn-ssi-services/UserIMS 
@@ -91,6 +93,7 @@ services:
       - tyknims
     links:
       - indypool
+    restart: unless-stopped
   121db:
     image: "postgres:9.6"
     init: true
@@ -108,6 +111,7 @@ services:
     networks:
       pool_network:
         ipv4_address: 11.0.0.6
+    restart: unless-stopped
   121-service:
     build: 
       context: 121-service
@@ -123,6 +127,7 @@ services:
     networks:
       pool_network:
         ipv4_address: 11.0.0.7
+    restart: unless-stopped
   PA-accounts-service:
     build:
       context: PA-accounts-service
@@ -139,6 +144,7 @@ services:
     networks:
       pool_network:
         ipv4_address: 11.0.0.8
+    restart: unless-stopped
 
 networks:
   pool_network:
