--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -8,7 +8,7 @@
     "lint": "npx eslint '**/*.ts'",
     "prestart": "npm run migration:run && npx ts-node src/scripts seed-prod",
     "start": "node index.js",
-    "start:dev": "tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
+    "start:dev": "npm run migration:run && tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
     "start:watch": "nodemon",
     "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
