--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -12,10 +12,9 @@
     "start:watch": "nodemon",
     "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
-    "seed:dev": "npx ts-node src/scripts seed-dev && npm run seed:publish",
-    "seed:mvp": "npx ts-node src/scripts seed-mvp && npm run seed:publish",
-    "seed:pilot": "npx ts-node src/scripts seed-pilot && npm run seed:publish",
-    "seed:publish": "npx ts-node src/scripts seed-publish",
+    "seed:dev": "npx ts-node src/scripts seed-dev",
+    "seed:mvp": "npx ts-node src/scripts seed-mvp",
+    "seed:pilot": "npx ts-node src/scripts seed-pilot",
     "test": "jest --config=jest.json",
     "test:watch": "npm test -- --watchAll",
     "test:coverage": "npm test -- --coverage --coverageDirectory=coverage",
