--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^4.11.7",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@swimlane/ngx-datatable": "^16.0.3",
     "core-js": "2.6.8",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
