Changed orm config example to log queries AB#1285

--- a/services/121-service/ormconfig.json.example
+++ b/services/121-service/ormconfig.json.example
@@ -15,5 +15,7 @@
     "migrationsDir": "migration"
   },
   "dropSchema": false,
-  "synchronize": true
+  "synchronize": true,
+  "logging": ["query"],
+  "logger": "file"
 }
