Configure options of directory-listings

--- a/tools/121-platform-https.conf
+++ b/tools/121-platform-https.conf
@@ -29,7 +29,7 @@
 
   # Server configuration for all web interfaces:
   # https://github.com/h5bp/server-configs-apache
-  <Directory "/var/www/121-platform/">    
+  <Directory "/var/www/121-platform/">
     AddDefaultCharset utf-8
 
     ServerSignature Off
@@ -123,8 +123,12 @@
       ExpiresByType text/cache-manifest                   "access plus 0 seconds"
     </IfModule>
 
+    <IfModule mod_dir.c>
+      IndexOptions FancyIndexing FoldersFirst IgnoreClient SuppressColumnSorting SuppressDescription SuppressIcon SuppressSize
+    </IfModule>
+
   </Directory>
-  
+
   <Directory "/var/www/121-platform/PA-app/">
     FallbackResource /PA-app/index.html
   </Directory>
