--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -17,21 +17,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.x.x",
-    "@angular/core": "^7.x.x",
-    "@angular/forms": "^7.x.x",
-    "@angular/http": "^7.x.x",
-    "@angular/platform-browser": "^7.x.x",
-    "@angular/platform-browser-dynamic": "^7.x.x",
+    "@angular/common": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
     "@angular/pwa": "^0.12.4",
-    "@angular/router": "^7.x.x",
-    "@angular/service-worker": "^7.x.x",
-    "@ionic/angular": "^4.11.7",
+    "@angular/router": "^7.2.16",
+    "@angular/service-worker": "^7.2.16",
+    "@ionic/angular": "^4.11.8",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-datatable": "^16.0.3",
     "core-js": "2.6.8",
-    "rxjs": "^6.5.3",
+    "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.26"
   },
@@ -41,25 +41,25 @@
     "@angular-devkit/core": "^7.3.9",
     "@angular-devkit/schematics": "^7.3.9",
     "@angular/cli": "^7.x.x",
-    "@angular/compiler": "^7.x.x",
-    "@angular/compiler-cli": "^7.x.x",
-    "@angular/language-service": "^7.x.x",
+    "@angular/compiler": "^7.2.16",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/language-service": "^7.2.16",
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.21",
+    "@types/node": "^12.12.24",
     "codelyzer": "^5.2.1",
     "dotenv": "^8.2.0",
-    "ionic": "^5.4.13",
+    "ionic": "^5.4.15",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.0",
-    "ts-node": "^8.5.4",
+    "ts-node": "^8.6.2",
     "tslint": "^5.20.1",
     "typescript": "3.2.4"
   }
