--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -24,17 +24,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.x.x",
-    "@angular/core": "^7.x.x",
-    "@angular/forms": "^7.x.x",
-    "@angular/http": "^7.x.x",
-    "@angular/platform-browser": "^7.x.x",
-    "@angular/platform-browser-dynamic": "^7.x.x",
-    "@angular/router": "^7.x.x",
+    "@angular/common": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
     "@ionic-native/core": "^5.16.0",
     "@ionic-native/splash-screen": "^5.16.0",
     "@ionic-native/status-bar": "^5.16.0",
-    "@ionic/angular": "^4.11.3",
+    "@ionic/angular": "^4.11.8",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -43,7 +43,7 @@
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^5.0.1",
     "core-js": "2.6.8",
-    "rxjs": "~6.5.1",
+    "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.29"
   },
@@ -53,14 +53,14 @@
     "@angular-devkit/core": "^7.3.9",
     "@angular-devkit/schematics": "^7.3.9",
     "@angular/cli": "^7.x.x",
-    "@angular/compiler": "^7.x.x",
-    "@angular/compiler-cli": "^7.x.x",
-    "@angular/language-service": "^7.x.x",
+    "@angular/compiler": "^7.2.16",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/language-service": "^7.2.16",
     "@ionic/angular-toolkit": "^1.5.1",
-    "@types/jasmine": "^3.4.4",
+    "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.3",
-    "codelyzer": "^5.2.0",
+    "@types/node": "^12.12.24",
+    "codelyzer": "^5.2.1",
     "cordova": "^9.0.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -70,14 +70,14 @@
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-res": "^0.8.1",
     "dotenv": "^8.2.0",
-    "ionic": "^5.4.5",
+    "ionic": "^5.4.15",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "native-run": "^0.2.9",
     "protractor": "~5.4.0",
     "ts-node": "~8.3.0",
