Added roles to seed init AB#1363

--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -3,12 +3,17 @@ export const USERCONFIG = {
   passwordAdmin: 'password',
   usernameAdmin: 'admin',
   emailAdmin: 'admin@example.org',
-  countryIdAdmin: 1,
   passwordAidWorker: 'password',
   usernameAidWorker: 'aidworker',
-  emailAidWorker: 'aidworker@example.org',
-  countryIdAidWorker: 1,
-}
+  emailAidWorker: 'program-manager@example.org',
+  passwordProgramManager: 'password',
+  usernameProgramManager: 'program-manager',
+  emailProgramManager: 'program-manager@example.org',
+  passwordPrivacyOfficer: 'password',
+  usernamePrivacyOfficer: 'privacy-officer',
+  emailPrivacyOfficer: 'privacy-officer@example.org',
+  countryId: 1
+};
 
 
 export const TWILIO = {
