--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -26,6 +26,7 @@
     "@angular/pwa": "^0.12.4",
     "@angular/router": "^7.2.16",
     "@angular/service-worker": "^7.2.16",
+    "@auth0/angular-jwt": "^3.0.1",
     "@ionic/angular": "^4.11.8",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
