AB#1378 fix mistake in userconfig

--- a/services/121-service/src/secrets.ts.example
+++ b/services/121-service/src/secrets.ts.example
@@ -5,7 +5,7 @@ export const USERCONFIG = {
   emailAdmin: 'admin@example.org',
   passwordAidWorker: 'password',
   usernameAidWorker: 'aidworker',
-  emailAidWorker: 'program-manager@example.org',
+  emailAidWorker: 'aidworker@example.org',
   passwordProgramManager: 'password',
   usernameProgramManager: 'program-manager',
   emailProgramManager: 'program-manager@example.org',
