--- a/interfaces/HO-Portal/package.json
+++ b/interfaces/HO-Portal/package.json
@@ -32,6 +32,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-datatable": "^16.0.3",
     "core-js": "2.6.8",
+    "file-saver": "^2.0.2",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.26"
@@ -46,6 +47,7 @@
     "@angular/compiler-cli": "^7.2.16",
     "@angular/language-service": "^7.2.16",
     "@ionic/angular-toolkit": "^1.5.1",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.24",
