--- a/services/121-service/package.json
+++ b/services/121-service/package.json
@@ -13,7 +13,9 @@
     "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
     "seed:dev": "npx ts-node src/scripts seed-dev",
-    "seed:mvp": "npx ts-node src/scripts seed-mvp",
+    "seed:multi-program": "npx ts-node src/scripts seed-multi-program",
+    "seed:single-program": "npx ts-node src/scripts seed-single-program",
+    "seed:publish": "npx ts-node src/scripts seed-publish",
     "seed:pilot": "npx ts-node src/scripts seed-pilot",
     "test": "jest --config=jest.json",
     "test:watch": "npm test -- --watchAll",
