--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -43,6 +43,7 @@
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^5.0.1",
     "core-js": "2.6.8",
+    "howler": "^2.1.3",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.29"
