Add a command-line script to handle audio-file processing

--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -4,14 +4,15 @@
   "author": "121.global",
   "homepage": "https://www.121.global/",
   "scripts": {
+    "ng": "ng",
+    "ionic": "ionic",
+    "cordova": "cordova",
+    "start": "ng serve --port 0",
     "dev:on-device": "npm run ionic -- cordova run android --device --consolelogs --livereload",
     "dev:local-android": "npm run ionic -- cordova run android --emulator --consolelogs --livereload",
     "dev:local-ios": "npm run ionic -- cordova run ios --consolelogs --livereload",
     "dev:local": "npm run ionic -- cordova run browser --consolelogs --livereload",
-    "cordova": "cordova",
-    "ionic": "ionic",
-    "ng": "ng",
-    "start": "ng serve --port 0",
+    "generate-assets-audio": "node ./_generate-assets-audio.js",
     "set-env-variables": "node ./_set-env-variabes.js",
     "prebuild": "npm run set-env-variables",
     "build": "ng build",
