--- a/interfaces/PA-App/.env.example
+++ b/interfaces/PA-App/.env.example
@@ -9,7 +9,7 @@ NG_PRODUCTION=true
 NG_IS_DEBUG=false
 NG_SHOW_DEBUG=false
 NG_USE_ANIMATION=true
-
+NG_ALWAYS_SHOW_TEXT_PLAYER=false
 NG_LOCAL_STORAGE=false
 
 NG_URL_121_SERVICE_API=
