--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -58,6 +58,7 @@
     "@angular/compiler": "^7.2.16",
     "@angular/compiler-cli": "^7.2.16",
     "@angular/language-service": "^7.2.16",
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
