Include audio-asset generation in build-step

--- a/interfaces/PA-App/package.json
+++ b/interfaces/PA-App/package.json
@@ -14,9 +14,9 @@
     "dev:local": "npm run ionic -- cordova run browser --consolelogs --livereload",
     "generate-assets-audio": "node ./_generate-assets-audio.js",
     "set-env-variables": "node ./_set-env-variabes.js",
-    "prebuild": "npm run set-env-variables",
+    "prebuild": "npm run set-env-variables && npm run generate-assets-audio -- en",
     "build": "ng build",
-    "prebuild:native": "npm run set-env-variables",
+    "prebuild:native": "npm run prebuild",
     "build:native": "npm run ionic -- cordova build android ",
     "test": "ng test --no-watch --browsers=ChromeHeadless",
     "test:dev": "ng test",
